package config;

public class Config {
    public static String PROJECT_PATH = "target/classes";
    public static final String FILE_GENERATION_PATH = "docs/report/report.txt";
    public static final String API_KEY = "";

}
